# sigils

./: .gitignore  CHANGELOG.md  LICENSE  LICENSE.txt  README.rst  benchmark.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.json  tox.ini
.github/ISSUE_TEMPLATE/: standard-feature-request.md  standard-request.md
.github/workflows/: tests.yml
samples/: %[odoo].conf
sigils/: __init__.py  __main__.py  benchmark.py  cli.py  context.py  contexts.py  errors.py  exceptions.py  extract.py  filters.py  funcs.py  parse.py  parser.py  parsing.py  replace.py  resolve.py  sigil.py  sigils.py  tests.py  tools.py  transform.py  transforms.py
sigils/django/templatetags/: sigils.py
sigils/django/tests/: test_transforms.py
sigils/tests/: test_cli.py  test_configparser.py  test_context.py  test_contexts.py  test_extract.py  test_filters.py  test_funcs.py  test_models.py  test_parser.py  test_parsing.py  test_replace.py  test_resolve.py  test_sysenv.py  test_tools.py  test_transforms.py
sigils/tests/data/: context.ini  context.json  context.py  context.toml  context.yaml  sample.txt  sample3.txt  settings.ini
