[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sigils"
version = "0.3.1"
authors = [
    {name = "Rafael Jesús Guillén Osorio", email = "arthexis@gmail.com"},
]
description = "Interpolate with %[sigils]."
readme = "README.rst"
requires-python = ">=3.10"
keywords = ["utils", "sigils", "string", "text", "context"]
license = {text = "MIT"}
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries',
    'Topic :: Text Processing :: Markup',
    'Topic :: Software Development :: Pre-processors',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
    'Environment :: Console',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
dependencies = [
]

[project.urls]
Source = "https://github.com/arthexis/sigils"
Bug-Tracker = "https://github.com/arthexis/sigils/issues"


[project.scripts]
sigils = "sigils.__main__:main"

